// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivateRoute renders component if authenticated 1`] = `
<div>
  <p>
    Hello World!
  </p>
</div>
`;

exports[`PrivateRoute renders login page if not authenticated 1`] = `
<div>
  <p>
    You can log in on this page!
  </p>
</div>
`;
